# cpp-to-rust

./: Cargo.toml  README.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cpp-parser/: Cargo.toml
crates/cpp-parser/src/: analyzer.rs  lib.rs  memory.rs  preprocessor.rs  stl_containers.rs  types.rs  virtual_fn.rs  void_ptr.rs
crates/rust-generator/: Cargo.toml
crates/rust-generator/src/: generator.rs  lib.rs  llm.rs  ownership.rs  prompt.rs
crates/verifier/: Cargo.toml
crates/verifier/src/: comparator.rs  compiler.rs  fix_loop.rs  lib.rs  sanitizer.rs
output/cjson/: Cargo.toml
output/cjson/src/: lib.rs  main.rs
output/sqlite3-utf/: Cargo.toml
output/sqlite3-utf/src/: lib.rs  main.rs
profiles/c11/: config.toml
profiles/c99/: config.toml
profiles/cpp11/: config.toml
profiles/cpp17/: config.toml
profiles/embedded/: config.toml
results/: cjson-check.txt  cjson-test.txt  oss-conversion-report.md  sqlite3-utf-check.txt
tests/fixtures/c/02_pointer_arithmetic/: expected_output.txt  input.c
tests/fixtures/c/03_struct_and_malloc/: expected_output.txt  input.c  raii_expected.rs
tests/fixtures/c/04_file_io/: expected_output.txt  input.c
tests/fixtures/c/05_linked_list/: expected_output.txt  input.c
tests/fixtures/cpp/01_class_basic/: expected_output.txt  input.cpp
tests/fixtures/cpp/02_inheritance/: input.cpp
tests/fixtures/cpp/03_template/: expected_output.txt  input.cpp
tests/fixtures/cpp/04_stl_containers/: expected_output.txt  input.cpp
tests/fixtures/cpp/05_smart_pointers/: input.cpp  smart_pointer_expected.rs
