[package]
name = "cpp-to-rust"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
cpp-parser = { path = "../cpp-parser" }
rust-generator = { path = "../rust-generator" }
verifier = { path = "../verifier" }
