[package]
name = "rust-generator"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
regex.workspace = true
toml.workspace = true
cpp-parser = { path = "../cpp-parser" }
